--- a/catalogo.html
+++ b/catalogo.html
@@ -9,5 +9,6 @@
 <body>
 <h1>Página de Catálogo</h1>
 <p>Sejam bem-vindos ao nosso catálogo</p>
+<p>Essa página é atualizada semanalmente</p>
 </body>
 </html>
