--- a/sobre.html
+++ b/sobre.html
@@ -7,11 +7,8 @@
 <title>Document</title>
 </head>
 <body>
-<h1>Página inicial</h1>
-<p>Sejam bem-vindos ao nosso website</p>
+<h1>Sobre nosso porjeto</h1>
+<p>Projeto Merge</p>
 <br>
-<a href="catalogo.html">Ir para a página de catálogo</a>
-<br>
-<a href="sobre.html">Sobre nós</a>
 </body>
 </html>
