--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Página inicial</h1>
 <p>Sejam bem-vindos ao nosso website</p>
 <br>
-<a href="catalogo.html">Ir para a página de catálogo</a>
+<a href="catalogo.html">Ir para catálogo</a>
 <br>
 <a href="sobre.html">Sobre nós</a>
 </body>
