--- a/sobre.html
+++ b/sobre.html
@@ -7,7 +7,7 @@
 <title>Document</title>
 </head>
 <body>
-<h1>Sobre nosso porjeto</h1>
+<h1>Sobre nosso projeto</h1>
 <p>Projeto Merge</p>
 <br>
 </body>
