--- a/blog.html
+++ b/blog.html
@@ -7,11 +7,8 @@
 <title>Document</title>
 </head>
 <body>
-<h1>Página inicial</h1>
-<p>Sejam bem-vindos ao nosso website</p>
+<h1>Página Blog</h1>
+<p>Sejam bem-vindos ao nosso Blog</p>
 <br>
-<a href="catalogo.html">Ir para a página de catálogo</a>
-<a href="sobre.html">Conheça nossa empresa</a>
-<a href="blog.html">Acesse o blog</a>
 </body>
 </html>
